use released apk

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 dekat dengan perkembangan anak anda. Pantau perkembangan anak anda dengan <strong>mudah dan
                   cepat!</strong></p>
               <ul class="d-flex">
-                <li><a href="assets/latest.apk" class="main-btn wow fadeInLeftBig" data-wow-duration="1.3s" data-wow-delay="0.8s"
+                <li><a href="https://github.com/Al-Aziziyah/SPD-Landing-Page/releases/download/releasev1/spd-v1.apk" class="main-btn wow fadeInLeftBig" data-wow-duration="1.3s" data-wow-delay="0.8s"
                     style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.8s; animation-name: fadeInLeftBig;">Download Sekarang</a></li>
                 <!-- <li><a href="https://www.youtube.com/watch?v=r44RKWyfcFw"
                     class="header-video video-popup wow fadeInLeftBig" data-wow-duration="1.3s" data-wow-delay="1.2s"
@@ -390,7 +390,7 @@
             <p class="text">Silahkan download sekarang aplikasinya dan mulai pantau perkembangan anak anda!.</p>
             <ul>
               <li><a class="app-store" href="#"><img src="assets/images/app-store.png" alt="store"></a></li>
-              <li><a class="play-store" href="assets/latest.apk"><img src="assets/images/play-store.png"
+              <li><a class="play-store" href="https://github.com/Al-Aziziyah/SPD-Landing-Page/releases/download/releasev1/spd-v1.apk"><img src="assets/images/play-store.png"
                     alt="store"></a></li>
             </ul>
           </div> <!-- download image -->
