--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
                   <h4 class="title">Support</h4>
                 </div>
                 <ul class="link">
-                  <li><a class="" href="privacy-spd.html">Privacy Policy</a></li>
-                  <li><a class="" href="tos-spd.html">Terms of Service</a></li>
+                  <li><a class="" href="privacy.html">Privacy Policy</a></li>
+                  <li><a class="" href="tos.html">Terms of Service</a></li>
                 </ul>
               </div> <!-- footer link wrapper -->
             </div> <!-- footer link -->
