--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <!--====== Title ======-->
-  <title>AppLand - App Landing Page Template</title>
+  <title>SPD - Sistem Pengasuhan Digital</title>
 
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
