--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-lg-6 col-md-9">
           <div class="download-image mt-50 wow fadeInRightBig" data-wow-duration="1.3s" data-wow-delay="0.2s">
-            <img class="image" src="assets/images/spd-download-app.png" alt="download">
+            <img class="" src="assets/images/spd-download-app.png" alt="download">
 
             <div class="download-shape-1"></div>
             <div class="download-shape-2">
